<resources>
    <string name="app_name">Shopping Map</string>
    <string name="title_forum">Forum</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_activity_start">Shopping Map</string>
    <string name="title_activity_store_profile">Store</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="my_account">My Account</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="eg">0</string>
    <string name="og">1</string>
    <string name="user_login">User Login</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterPw">Enter your password</string>
    <string name="signIn">SIGN IN</string>
    <string name="SignUpHere">Not have an account? Signup here!</string>
    <string name="errorEmail">Please enter email</string>
    <string name="errorPw">Please enter password</string>
    <string name="user_registration">User Registration</string>
    <string name="register">REGISTER</string>
    <string name="SignInHere">Already Registered? Sign In Here!</string>
    <string name="signingIn">Signing In…</string>
    <string name="title_activity_store_list">StoreListActivity</string>
    <string name="user_profile">User Profile</string>
<<<<<<< HEAD
    <string name="welcome">Welcome </string>
=======
    <string name= "welcome">Welcome </string>
    <string name= "buttonSave">Save</string>
>>>>>>> 2108198dfec8118a0de258584417afd236a470bf

    <!--Stores-->

    <string name="H1">Book / Scribing Utensils</string>
    <string name="H1S1" translatable="false">Büro Exklusiv</string>

    <string name="H2">Service</string>
    <string name="H2S1" translatable="false">AggerEnergie</string>
    <string name="H2S2" translatable="false">Barbier</string>
    <string name="H2S3" translatable="false">Postbank</string>
    <string name="H2S4" translatable="false">FotoFix</string>
    <string name="H2S5" translatable="false">Hair Express</string>
    <string name="H2S6" translatable="false">Kiddieland</string>
    <string name="H2S7" translatable="false">Nailtastic</string>
    <string name="H2S8" translatable="false">Remass Massage</string>
    <string name="H2S9" translatable="false">Roland Reinigung</string>
    <string name="H2S10" translatable="false">Service Punkt</string>
    <string name="H2S11" translatable="false">Reisebüro Sonnenklar</string>
    <string name="H2S12" translatable="false">Sparkasse </string>
    <string name="H2S13" translatable="false">Super Cut</string>
    <string name="H2S14" translatable="false">TH Köln</string>
    <string name="H2S15" translatable="false">Volksbank</string>

    <string name="H3">Drug Store/Optics</string>
    <string name="H3S1" translatable="false">eyes + more</string>
    <string name="H3S2" translatable="false">Müller</string>

    <string name="H4">Gastronomy</string>
    <string name="H4S1" translatable="false">Best Döner</string>
    <string name="H4S2" translatable="false">Ditsch</string>
    <string name="H4S3" translatable="false">Chocolate Company</string>
    <string name="H4S4" translatable="false">Eiscafé Martini</string>
    <string name="H4S5" translatable="false">Grill Heuser</string>
    <string name="H4S6" translatable="false">Jade</string>
    <string name="H4S7" translatable="false">Kunstwerk</string>
    <string name="H4S8" translatable="false">Landbäckerei Sommer</string>
    <string name="H4S9" translatable="false">Olive Buffet Deluxe</string>
    <string name="H4S10" translatable="false">Süße Ecke</string>
    <string name="H4S11" translatable="false">Tasty Donuts</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="show_all_stores">Show All Stores</string>
    <string name="back_to_map">Back To Map</string>
    <string name="notification">Use our Shopping Map!</string>
    <string name="registeringUser">Registering User…</string>
    <string name="registerSuccess">Registered Successfully</string>
    <string name="registerError">Could not register. Please try again</string>
    <string name="add_friends">Add Friends</string>
    <string name="profile">Profile</string>
    <string name="H5">Lebensmittel/Genussmittel</string>
    <string name="H6">Mode</string>


</resources>
